--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -132,10 +132,10 @@
   margin-top: -2rem;
 }
 
-.bottom-nav {
+/* .bottom-nav {
   margin-top: 50rem;
   margin-left: -6em;
-}
+} */
 
 @media only screen and (min-width: 1400px) {
     /* For extra large screens, i.e., laptops and desktops: */
