--- a/src/styles/LinksTop.css
+++ b/src/styles/LinksTop.css
@@ -2,7 +2,7 @@
 
 #authors {
     position: relative;
-    width: 5 em;
+    /* width: 5 em; */
     max-width: 100%;
     height: auto;
     /* z-index: 20; */
@@ -11,7 +11,8 @@
     font-family: HelveticaNeue;
     font-size: 1.5em;
     display: inline-block;
-    left: 5em;
+    /* left: 1em; */
+    margin-left: -15.5em;
     top: -2rem;
     height: 1.5em;
 }
