--- a/src/styles/TableOfContents.css
+++ b/src/styles/TableOfContents.css
@@ -18,5 +18,5 @@
 }
 
 .bottom-nav {
-  margin-top: -1rem;
+  margin-top: 12rem;
 }
